[package]
name = "cw-native-vesting"
version = "0.17.1"
authors = ["Jakub Bogucki <jakub@confio.gmbh>", "siriustaikun <siriustaikun@protonmail.com"]
edition = "2018"
description = "Vesting Account as a contract"
repository = "https://github.com/Pupmos/cw-native-vesting"
homepage = "https://pupmos.zone"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.1.9"
cw-utils = "1.0.1"
cw2 = "1.0.0"
cw-storage-plus = "1.0.1"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = "1"

[dev-dependencies]
anyhow = "1"
assert_matches = "1"
derivative = "2"
cosmwasm-schema = "1.1.9"
cw-multi-test = "0.16.2"
